Scaffold the React app with Material-UI
Add a basic navigation layout

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,5 +2,11 @@
   "name": "insightflow-frontend",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@mui/material": "^5.15.0",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  }
 }
