--- a/static-demo/package.json
+++ b/static-demo/package.json
@@ -2,7 +2,7 @@
   "name": "insightflow-static-demo",
   "version": "1.0.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://YOUR_GITHUB_USERNAME.github.io/InsightFlow/static-demo",
   "dependencies": {
     "@mui/material": "^5.15.0",
     "@emotion/react": "^11.11.0",
@@ -15,6 +15,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
